Mon May 20 03:07:24 BST 2002  Colin Watson  <cjwatson@debian.org>

	* src/man.c (setenv_less): New function to set up $LESS. This
	  honours the new environment variable $MANLESS, which overrides the
	  usual processing and is copied directly into $LESS.
	  (make_display_command): Use it.
	* man/man1/man.man1 (OPTIONS): Mention $MANLESS alongside the
	  --prompt option.
	  (ENVIRONMENT): Document $MANLESS.

Mon May 20 02:16:43 BST 2002  Colin Watson  <cjwatson@debian.org>

	* src/man.c (compare_candidates): Compare id fields as a last
	  resort, so that, for example, real pages sort ahead of whatis-only
	  names.
	  (try_section): Set the id field based on the output of ult_src().

	* src/man.c (man): When locating pages, don't stop when one is found
	  in a particular directory and -a wasn't given. That's now the job
	  of the display code.

Mon May 20 01:16:02 BST 2002  Colin Watson  <cjwatson@debian.org>

	* libdb/db_lookup.c (free_mandata_elements): New function, to be
	  used rather than freeing the addr field directly. This frees name
	  as well.
	  (free_mandata_struct): Use it.
	* libdb/db_btree.c (dbstore, dblookup): Likewise.
	* libdb/db_store.c (dbstore): Likewise.
	* src/whatis.c (whatis): Likewise.
	* libdb/db_storage.h: Prototype it.

	* libdb/db_store.c (replace_if_necessary): Rename in and info to
	  newdata and olddata, which are more comprehensible. Don't check
	  that the name fields match here - the caller should do that.
	  (dbstore): Make sure in->name isn't set on entry, and instead set
	  it to the basename where necessary. Don't set the name field in
	  multi keys, which use the proper case.

	* src/check_mandirs.c (filename_info): We don't need to examine the
	  case of base_name here.

Thu May 16 00:47:05 BST 2002  Colin Watson  <cjwatson@debian.org>

	* libdb/db_btree.c (btree_flopen): If O_CREAT isn't set, check
	  whether we're trying to open a zero-length database and, if so,