@@ -1,3 +1,11 @@
+Wed May 22 00:06:18 BST 2002  Colin Watson  <cjwatson@debian.org>
+
+	* libdb/db_store.c (compare_ids): New function, replacing the
+	  FAVOUR() macro. Without this, the last-but-one commit won't
+	  compile ...
+	  (replace_if_necessary): Use it.
+	* libdb/db_storage.h: Prototype it.
+
 Mon May 20 03:07:24 BST 2002  Colin Watson  <cjwatson@debian.org>
 
 	* src/man.c (setenv_less): New function to set up $LESS. This
